testsuite/bsc.syntax/bsv05/dups/DupTopLevelVariableDef.bsv.bsc-out.expected
checking package dependencies
Error: "DupTopLevelVariableDef.bsv", line 6, column 9: (T0011)
  Declaration of `foo' conflicts with previous declaration at
  "DupTopLevelVariableDef.bsv", line 3, column 6
