testsuite/bsc.syntax/bsv05/dups/DupTopLevelVariableDef.bsv
export foo;

Bool foo;
foo = True;

Integer foo;
foo = 5;
